<resources>
    <string name="app_name">Movie</string>
    <string name="api_key">e30ZGGm1H2AZiQL9nLYJa4MhdTt3F6xd</string>
    <string name="error">Error</string>
    <string name="please_check_your_internet_connection">please check your internet connection</string>
    <string name="ok">OK</string>
    <string name="title">Title</string>
    <string name="published_by">Published By</string>
    <string name="rating">Rating</string>
    <string name="summary">Summary</string>
    <string name="date">Date</string>
    <string name="un_known">Un Known</string>
</resources>