<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.movieDetails.MoviesDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:layout_marginTop="@dimen/margin_xLarge"
                app:cardCornerRadius="@dimen/margin_mid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_cover"
                    android:layout_width="200dp"
                    android:layout_height="180dp"
                    android:src="@drawable/placeholder"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_mid"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xLarge"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/txv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txv_title" />

            <TextView
                android:id="@+id/published_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/published_by"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xLarge"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/txv_published_by"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toTopOf="@+id/txv_published_by" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xLarge"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/txv_rating"
                app:layout_constraintStart_toStartOf="@+id/published_by"
                app:layout_constraintTop_toTopOf="@+id/txv_rating" />

            <TextView
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xLarge"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/txv_summary"
                app:layout_constraintStart_toStartOf="@+id/rating"
                app:layout_constraintTop_toTopOf="@+id/txv_summary" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xLarge"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/txv_date"
                app:layout_constraintStart_toStartOf="@+id/summary"
                app:layout_constraintTop_toTopOf="@+id/txv_date" />

            <TextView
                android:id="@+id/txv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_mid"
                android:layout_marginEnd="@dimen/margin_mid"
                android:textSize="@dimen/font_mid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:text="The Black Godfather" />

            <TextView
                android:id="@+id/txv_published_by"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_mid"
                android:textSize="@dimen/font_mid"
                app:layout_constraintEnd_toEndOf="@+id/txv_title"
                app:layout_constraintStart_toEndOf="@+id/published_by"
                app:layout_constraintTop_toBottomOf="@+id/txv_title"
                tools:text="BEN KENIGSBERG" />

            <TextView
                android:id="@+id/txv_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_mid"
                android:textSize="@dimen/font_mid"
                app:layout_constraintEnd_toEndOf="@+id/txv_published_by"
                app:layout_constraintStart_toEndOf="@+id/rating"
                app:layout_constraintTop_toBottomOf="@+id/txv_published_by"
                tools:text="TV-MA" />

            <TextView
                android:id="@+id/txv_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_mid"
                android:textSize="@dimen/font_mid"
                app:layout_constraintEnd_toEndOf="@+id/txv_rating"
                app:layout_constraintStart_toEndOf="@+id/summary"
                app:layout_constraintTop_toBottomOf="@+id/txv_rating"
                tools:text="Reginald Hudlin’s documentary about Clarence Avant includes many golden anecdotes." />

            <TextView
                android:id="@+id/txv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_mid"
                app:layout_constraintEnd_toEndOf="@+id/txv_summary"
                app:layout_constraintStart_toEndOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@+id/txv_summary"
                tools:text="2019-06-06" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/black"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txv_title_screen"
                style="@style/item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                tools:text="The Black Godfather" />

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@android:color/transparent"
                android:src="@drawable/back_button_white"
                tools:ignore="ContentDescription,UsingOnClickInXml" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/photo_full_screen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.github.chrisbanes.photoview.PhotoView
                    android:id="@+id/img_full_screen"
                    android:layout_width="0dp"
                    android:layout_height="500dp"
                    android:src="@drawable/placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>